--- a/STATIC/common.css
+++ b/STATIC/common.css
@@ -42,11 +42,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-/* Tables */
+/*!* Tables *!
 table { width: 100%; border-collapse: collapse; border: 1px solid #666; margin: 1em 0; }
 th, td { border: 1px solid #666; padding: 0.5em; }
 th { background: #DDDDB7; text-align: left; }
-caption { text-align: left; margin: 0 0 0.5em; }
+caption { text-align: left; margin: 0 0 0.5em; }*/
 
 
 
@@ -120,6 +120,41 @@ footer a {
 .card a:hover {
     background-color: #4096b9;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 0.5rem;
+    text-align: left;
+    border: 1px solid #305a77;
+}
+
+
+
+th {
+    background-color: #192e3a;
+    color: #fff;
+}
+
+td {
+    background-color: #06060a;
+    color: #2bc3c8;
+
+}
+
+tr:nth-child(even) {
+    background-color: #4096b9;
+}
+
+tr:hover {
+    background-color: #2bc3c8;
+}
+
+
+
 
 
 
