--- a/STATIC/common.css
+++ b/STATIC/common.css
@@ -96,7 +96,7 @@ footer {
     text-decoration: none;
     transition: background-color 0.2s ease-in-out;
     float: right;
-    margin: 0 5px 0 0;
+    margin: 0 1rem 0 0;
 }
 
 footer a {
